# ChangeLog for x11-libs/libdockapp
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/libdockapp/ChangeLog,v 1.32 2006/10/27 09:14:10 s4t4n Exp $

  27 Oct 2006; Michele Noberasco <s4t4n@gentoo.org> libdockapp-0.6.1.ebuild:
  Added missing autoconf/automake dependancies. Closes bug #150517.
  libdockapp-0.6.0.ebuild:
  Wiped out previous release.

  20 Feb 2006; Markus Rothe <corsair@gentoo.org> libdockapp-0.6.1.ebuild:
  Stable on ppc64

  17 Feb 2006; Michael Hanselmann <hansmi@gentoo.org>
  libdockapp-0.6.1.ebuild:
  Stable on ppc.

  07 Feb 2006; Simon Stelling <blubb@gentoo.org> libdockapp-0.6.1.ebuild:
  stable on amd64

  01 Feb 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  libdockapp-0.6.1.ebuild:
  Stable on sparc

  01 Feb 2006; Michele Noberasco <s4t4n@gentoo.org> libdockapp-0.6.1.ebuild:
  Stable for x86. Closes bug #105530.

*libdockapp-0.6.1 (21 Jan 2006)

  21 Jan 2006; Krzysiek Pawlik <nelchael@gentoo.org>
  +files/install-paths.patch-0.6.1, +files/legacy.patch-0.6.1,
  +libdockapp-0.6.1.ebuild:
  Version bump, see bug #119300.

  15 Jan 2006; Krzysiek Pawlik <nelchael@gentoo.org>
  -files/install-paths.patch-0.5.0-r1, -libdockapp-0.5.0-r1.ebuild,
  libdockapp-0.6.0.ebuild:
  Fixed DEPEND for modular X (bug #118261), removed old version.

  03 Nov 2005; Luis Medinas <metalgod@gentoo.org> libdockapp-0.6.0.ebuild:
  Marked Stable on amd64.

  03 Sep 2005; Markus Rothe <corsair@gentoo.org> libdockapp-0.6.0.ebuild:
  Stable on ppc64

  02 Sep 2005; Michael Hanselmann <hansmi@gentoo.org>
  libdockapp-0.6.0.ebuild:
  Stable on ppc.

  30 Aug 2005; Gustavo Zacarias <gustavoz@gentoo.org>
  libdockapp-0.6.0.ebuild:
  Stable on sparc

  29 Aug 2005; Michele Noberasco <s4t4n@gentoo.org> libdockapp-0.6.0.ebuild:
  Stable for x86.

*libdockapp-0.6.0 (08 Jun 2005)

  08 Jun 2005; Michele Noberasco <s4t4n@gentoo.org> libdockapp-0.6.0.ebuild: