@@ -1,6 +1,9 @@
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/libdockapp/libdockapp-0.6.1.ebuild,v 1.7 2006/10/27 09:14:10 s4t4n Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/libdockapp/libdockapp-0.6.1.ebuild,v 1.8 2006/11/02 09:10:23 s4t4n Exp $
+
+WANT_AUTOMAKE="1.5"
+WANT_AUTOCONF="latest"
 
 inherit eutils autotools
 
@@ -24,9 +27,7 @@ DEPEND="${RDEPEND}
 	|| ( (
 		x11-proto/xextproto
 		x11-proto/xproto )
-	virtual/x11 )
-	sys-devel/autoconf
-	sys-devel/automake"
+	virtual/x11 )"
 
 S=${WORKDIR}/${P/lib/}
 FONTDIR="/usr/share/fonts/${PN}-fonts"
