@@ -1,6 +1,9 @@
 # ChangeLog for x11-libs/libdockapp
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/libdockapp/ChangeLog,v 1.32 2006/10/27 09:14:10 s4t4n Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/libdockapp/ChangeLog,v 1.33 2006/11/02 09:10:23 s4t4n Exp $
+
+  02 Nov 2006; Michele Noberasco <s4t4n@gentoo.org> libdockapp-0.6.1.ebuild:
+  Fixed autotools dependancy again. Re-closes bug #150517.
 
   27 Oct 2006; Michele Noberasco <s4t4n@gentoo.org> libdockapp-0.6.1.ebuild:
   Added missing autoconf/automake dependancies. Closes bug #150517.
